--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,7 @@ rand = "0.8"
 regex = "1.5"
 ripemd = "0.1.3"
 rusqlite = { version = "0.33", features = ["bundled"] }
+
+[profile.release]
+opt-level = "s"
+lto = true
