Add resources to release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,5 @@ jobs:
         with:
           executable-name: mdict-rs
           target: ${{ matrix.platform.target }}
+          extra-files: "resources"
           changes-file:
